Fixed the overflow in the Explore Page

--- a/src/Components/Explore.module.css
+++ b/src/Components/Explore.module.css
@@ -47,6 +47,7 @@ h1{
     margin-top: 0px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 12px;
+    margin-top: 10px;
     font-weight: 200;
     color: hsl(0, 0%, 30%);
 }
